--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-brotli_asgi
-fastapi
+brotli_asgi==1.1.0
+fastapi==0.78.0
+uvicorn==0.18.2
+pydantic==1.10.4
+requests==2.28.2
+pytest==7.1.2
 starlette
-uvicorn
