--- a/src/currency/.env
+++ b/src/currency/.env
@@ -1,4 +1,4 @@
 PORT=9898
 DEBUG=enabled
 CONVERTER_API=https://api.apilayer.com/fixer/convert
-CONVERTER_API_KEY=
+CONVERTER_API_KEY=zbRXLi9GIDypt6pxoWCAiirYP8Ue49Zp
